included example on labeled.data.frames

--- a/Using_papeR.Rmd
+++ b/Using_papeR.Rmd
@@ -7,10 +7,11 @@ output:
     keep_md: yes
 ---
 
-```{r init_global_options, include=FALSE}
+```{r initialization, include=FALSE}
 library("knitr")
 options(knitr.table.format = 'markdown')
 opts_chunk$set(message = FALSE, warning = FALSE)
+set.seed(1234)
 ```
 
 
@@ -41,5 +42,62 @@ Now we can load the package:
 library("papeR")
 ```
 
-## Start using the package:
+## Labeled data frames
 
+To be able to use all features of the package, we first need to 
+create a labeled data frame. If we create a new data frame or 
+import a data frame, we can extract and set variable labels
+```{r}
+data_orig <- data.frame(a = 1:10, 
+                        b = 10:1, 
+                        c = factor(sample(c(1:2), 10, replace = TRUE)))
+data <- data_orig
+labels(data)
+labels(data) <- c("Variable a", "Variable b", "Variable c")
+is.labeled.data.frame(data)
+labels(data)
+```
+
+Alternatively, we can simply coerce the data frame:
+```{r}
+data2 <- as.labeled.data.frame(data_orig)
+labels(data2)
+```
+In this case, the original labels are kept. Per default,
+we use the variable names as labels. If the data set originates
+from an SPSS data set and is imported imported via the function 
+`read.spss()` from package **foreign**, we use the variable 
+labels from SPSS. 
+
+However, again we need to formally convert the data to a 
+`labeled.data.frame` by using the function 
+`as.labeled.data.frame()`.
+
+### Methods for labeled data frames
+
+For data frames of class `labeled.data.frame`, there exist
+special plotting functions:
+```{r plot_labeled_dataframe}
+par(mfrow = c(2, 2))
+plot(data)
+```
+
+As one can see, the plot type is automatically determined 
+based on the data type and the axis label is defiened by
+the `labels()`.
+
+To obtain group comparisons, we can use grouped plots:
+```{r grouped_plot}
+par(mfrow = c(1, 2))
+plot(data, by = "c")
+```
+
+We can as well plot everything against a metrical variable:
+```{r with_x}
+par(mfrow = c(1, 2))
+plot(data, with = "b")
+```
+
+## Summary tables
+
+t.b.c.
