improved papeR manual

--- a/Using_papeR.Rmd
+++ b/Using_papeR.Rmd
@@ -19,7 +19,7 @@ set.seed(1234)
 
 This is a short tutorial that covers some of the features of package **papeR**.
 
-## Installation
+### Installation
 
 To install the latest development version, one can use 
 **devtools** to install packages from [GitHub](http://github.com/hofnerb/papeR).
@@ -29,24 +29,27 @@ install.packages("devtools")
 ```
 
 Now we can load **devtools** to install **papeR**:
+
 ```{r install_papeR, eval=FALSE}
 library("devtools")
 install_github("hofnerb/papeR")
 ```
 (note that this chunk is not evaluated automatically).
 
-## Loading the package
+### Loading the package
 
 Now we can load the package:
+
 ```{r load_pkg}
 library("papeR")
 ```
 
-## Labeled data frames
+### Labeled data frames
 
 To be able to use all features of the package, we first need to 
 create a labeled data frame. If we create a new data frame or 
 import a data frame, we can extract and set variable labels
+
 ```{r}
 data_orig <- data.frame(a = 1:10, 
                         b = 10:1, 
@@ -59,6 +62,7 @@ labels(data)
 ```
 
 Alternatively, we can simply coerce the data frame:
+
 ```{r}
 data2 <- as.labeled.data.frame(data_orig)
 labels(data2)
@@ -73,10 +77,11 @@ However, again we need to formally convert the data to a
 `labeled.data.frame` by using the function 
 `as.labeled.data.frame()`.
 
-### Methods for labeled data frames
+#### Methods for labeled data frames
 
 For data frames of class `labeled.data.frame`, there exist
 special plotting functions:
+
 ```{r plot_labeled_dataframe}
 par(mfrow = c(2, 2))
 plot(data)
@@ -87,64 +92,79 @@ based on the data type and the axis label is defiened by
 the `labels()`.
 
 To obtain group comparisons, we can use grouped plots:
+
 ```{r grouped_plot}
 par(mfrow = c(1, 2))
 plot(data, by = "c")
 ```
 
 We can as well plot everything against a metrical variable:
+
 ```{r with_x}
 par(mfrow = c(1, 2))
 plot(data, with = "b")
 ```
 
-## Summary tables
+### Summary tables
 
 For LaTeX based reports, one can use the commands `latex.table.cont()` 
 and `latex.table.fac()` to automatically produce summary tables for either
 continuous variables or factors. 
-```{r}
+
+```{r, results='hide'}
 data(Orthodont, package = "nlme")
 latex.table.cont(Orthodont)
 latex.table.fac(Orthodont, variables = "Sex")
 ```
 
 Again, one can specify `group` to obtain grouped statistcis. In this
-case, one also gets `test`s for group differences:
-```{r}
+case, one also can gets `test`s for group differences:
+
+```{r, results='hide'}
 latex.table.cont(Orthodont, group = "Sex", test = FALSE)
 ```
+
+The results in LaTeX look as follows:
+
+![LaTeX Output](papeR_manual/tables.png)
+
 
 > **A non-latex version is currently under construction.**
 
 
-## Prettify output
+### Prettify output
 
 To prettify the output of a linear model, one can use the function
 `prettify()`. This function adds confidence intervals, properly 
 prints p-values, adds significance stars to the output (if desired) 
 and additionally adds pretty formating for factors.
+
 ```{r}
 linmod <- lm(distance ~ age + Sex, data = Orthodont)
 ## Extract pretty summary
 (pretty_lm <- prettify(summary(linmod)))
 ```
 
-The resulting table can now be formated for printing
-using packages like **xtable** for LaTeX 
-```{r}
+The resulting table can now be formated for printing using packages like 
+**xtable** for LaTeX which can be used in `.Rnw` files with the option 
+`results='asis'`
+
+```{r, results='hide'}
 library("xtable")
 xtable(pretty_lm)
 ```
-which can be used with the option `results='asis'` in LaTeX,
-or the function `kable()` for markdown:
+
+In markdown files (`.Rmd`) one can instead use the function `kable()` with the 
+chunk option `results='asis'`. The result looks as follows:
+
 ```{r, results='asis'}
 kable(pretty_lm)
 ```
 
-### Supported objects
 
-The function `prettify` is implemented for objects of the following classes:
+#### Supported objects
+
+The function `prettify` is *currently* implemented for objects of the following classes:
 
 * `lm` (linear models)
 * `glm` (generalized linear models)
